[package]
name = "bitcoin_wallet_crack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.175", features = ["derive"] }
rust-crypto = "0.2.36"
secp256k1 = "0.15.3"
rand = "0.6.0"
rust-base58 = "0.0.4"
bech32 = "0.7.1"
hex = "0.3.2"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
tokio = { version = "1.9.0", features = ["full"] }
serde_json = "1.0.70"
cc = "1.0.83"
